[gd_scene load_steps=39 format=2]

[ext_resource path="res://Assets/Scripts/FoodMinigame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/HandParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/Bichete.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Scripts/PetMinigame.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/console_background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Food/mushroom_spritesheet.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/hand_spritesheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Food/cheese_spritesheet.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Food/aceituna_spritesheet.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Dependent/buttons_spritesheet.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/background.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/food_UI.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Dependent/tamagotchi_case.png" type="Texture" id=14]
[ext_resource path="res://Assets/Scripts/Stat.gd" type="Script" id=15]
[ext_resource path="res://Assets/Scripts/BicheteManager.gd" type="Script" id=16]
[ext_resource path="res://Assets/Sprites/hand_UI.png" type="Texture" id=17]
[ext_resource path="res://Assets/Scripts/HUDPanel.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 163.088, 141.151 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 104, 134 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 134, 104, 134 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 104, 134 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 134, 104, 134 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 104, 134 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 134, 104, 134 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 73, 76 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 0, 76, 73, 76 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 73, 76 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 0, 60, 97, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 97, 60, 97, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 97, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 97, 0, 97, 60 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 97, 120, 97, 60 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 0, 120, 97, 60 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 11 )
region = Rect2( 0, 240, 97, 60 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 11 )
region = Rect2( 97, 240, 97, 60 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 11 )
region = Rect2( 0, 180, 97, 60 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 11 )
region = Rect2( 97, 180, 97, 60 )

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 360, 256 )
texture = ExtResource( 12 )

[node name="ConsoleBackground" type="Sprite" parent="."]
position = Vector2( 360, 288 )
texture = ExtResource( 6 )

[node name="BicheteManager" type="Node2D" parent="."]
script = ExtResource( 16 )
min_time_between_events = 14
food_minigame_dislike = 1

[node name="ScreenArea" type="Area2D" parent="BicheteManager"]
position = Vector2( -171.649, -20.655 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BicheteManager/ScreenArea"]
position = Vector2( 532.15, 308.013 )
shape = SubResource( 1 )

[node name="Bichete" parent="BicheteManager" instance=ExtResource( 4 )]
position = Vector2( 360, 287.358 )

[node name="FoodMinigame" type="Node2D" parent="BicheteManager"]
script = ExtResource( 1 )
total_time = 1

[node name="HungryStat" type="Node2D" parent="BicheteManager/FoodMinigame"]
script = ExtResource( 15 )
time_between_increases = 8.0

[node name="HUD" type="Control" parent="BicheteManager/FoodMinigame"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="BicheteManager/FoodMinigame/HUD"]

[node name="BottomPanel" type="TextureRect" parent="BicheteManager/FoodMinigame/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 210.943
margin_top = 370.0
margin_right = 506.943
margin_bottom = 437.0
rect_pivot_offset = Vector2( 148, 0 )
mouse_filter = 2
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Olive" type="TextureButton" parent="BicheteManager/FoodMinigame/HUD"]
margin_left = 204.625
margin_top = 300.0
margin_right = 308.625
margin_bottom = 434.0
texture_normal = SubResource( 2 )
texture_hover = SubResource( 3 )

[node name="Cheese" type="TextureButton" parent="BicheteManager/FoodMinigame/HUD"]
margin_left = 308.625
margin_top = 300.0
margin_right = 412.625
margin_bottom = 434.0
texture_normal = SubResource( 4 )
texture_hover = SubResource( 5 )

[node name="Mushroom" type="TextureButton" parent="BicheteManager/FoodMinigame/HUD"]
margin_left = 412.625
margin_top = 300.0
margin_right = 516.625
margin_bottom = 434.0
texture_normal = SubResource( 6 )
texture_hover = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Sprite" parent="BicheteManager/FoodMinigame"]
visible = false
position = Vector2( 360, 364.732 )
texture = ExtResource( 10 )
vframes = 4

[node name="Particles" parent="BicheteManager/FoodMinigame/Cursor" instance=ExtResource( 3 )]
visible = false
show_behind_parent = true
position = Vector2( -1.33481, -27.061 )
scale = Vector2( 2, 2 )

[node name="PetMinigame" type="Node2D" parent="BicheteManager"]
script = ExtResource( 5 )

[node name="BoredStat" type="Node2D" parent="BicheteManager/PetMinigame"]
script = ExtResource( 15 )
time_between_increases = 5.0

[node name="HUD" type="Control" parent="BicheteManager/PetMinigame"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="BicheteManager/PetMinigame/HUD"]

[node name="BottomPanel" type="TextureRect" parent="BicheteManager/PetMinigame/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 290.948
margin_top = 370.0
margin_right = 430.948
margin_bottom = 437.0
rect_pivot_offset = Vector2( 148, 0 )
mouse_filter = 2
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="TextureButton" parent="BicheteManager/PetMinigame/HUD"]
margin_left = 321.713
margin_top = 340.0
margin_right = 394.713
margin_bottom = 416.0
texture_normal = SubResource( 8 )
texture_hover = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Sprite" parent="BicheteManager/PetMinigame"]
visible = false
position = Vector2( 358.665, 382.926 )
texture = SubResource( 10 )

[node name="Particles" parent="BicheteManager/PetMinigame/Cursor" instance=ExtResource( 3 )]
visible = false
show_behind_parent = true
position = Vector2( 0, -45.2548 )
scale = Vector2( 2, 2 )

[node name="HUD" type="Control" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="TextureRect" parent="HUD"]
margin_right = 720.0
margin_bottom = 507.0
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PetButton" type="TextureButton" parent="HUD"]
margin_left = 565.409
margin_top = 187.284
margin_right = 662.409
margin_bottom = 247.284
shortcut_in_tooltip = false
texture_normal = SubResource( 11 )
texture_pressed = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodButton" type="TextureButton" parent="HUD"]
margin_left = 564.743
margin_top = 253.159
margin_right = 661.743
margin_bottom = 313.159
shortcut_in_tooltip = false
texture_normal = SubResource( 13 )
texture_pressed = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerButton" type="TextureButton" parent="HUD"]
margin_left = 564.443
margin_top = 349.695
margin_right = 661.443
margin_bottom = 409.695
texture_normal = SubResource( 15 )
texture_pressed = SubResource( 16 )

[node name="VolumeDown" type="TextureButton" parent="HUD"]
margin_left = 31.8228
margin_top = 338.866
margin_right = 128.823
margin_bottom = 398.866
texture_normal = SubResource( 17 )
texture_pressed = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeUp" type="TextureButton" parent="HUD"]
margin_left = 80.7272
margin_top = 361.13
margin_right = 177.727
margin_bottom = 421.13
texture_normal = SubResource( 19 )
texture_pressed = SubResource( 20 )
[connection signal="mouse_entered" from="BicheteManager/ScreenArea" to="BicheteManager" method="_on_ScreenArea_mouse_entered"]
[connection signal="mouse_exited" from="BicheteManager/ScreenArea" to="BicheteManager" method="_on_ScreenArea_mouse_exited"]
[connection signal="complete_minigame" from="BicheteManager/FoodMinigame" to="BicheteManager" method="_on_FoodMinigame_complete_minigame"]
[connection signal="sad_limit_reached" from="BicheteManager/FoodMinigame/HungryStat" to="BicheteManager" method="_on_HungryStat_sad_limit_reached"]
[connection signal="button_down" from="BicheteManager/FoodMinigame/HUD/Olive" to="BicheteManager/FoodMinigame" method="_on_Olive_button_down"]
[connection signal="button_down" from="BicheteManager/FoodMinigame/HUD/Cheese" to="BicheteManager/FoodMinigame" method="_on_Cheese_button_down"]
[connection signal="button_down" from="BicheteManager/FoodMinigame/HUD/Mushroom" to="BicheteManager/FoodMinigame" method="_on_Mushroom_button_down"]
[connection signal="complete_minigame" from="BicheteManager/PetMinigame" to="BicheteManager" method="_on_PetMinigame_complete_minigame"]
[connection signal="sad_limit_reached" from="BicheteManager/PetMinigame/BoredStat" to="BicheteManager" method="_on_BoredStat_sad_limit_reached"]
[connection signal="button_down" from="BicheteManager/PetMinigame/HUD/Hand" to="BicheteManager/PetMinigame" method="_on_Hand_button_down"]
[connection signal="button_down" from="HUD/PetButton" to="BicheteManager" method="_on_PetButton_button_down"]
[connection signal="button_down" from="HUD/FoodButton" to="BicheteManager" method="_on_FoodButton_button_down"]
[connection signal="button_down" from="HUD/PowerButton" to="HUD" method="_on_PowerButton_button_down"]
[connection signal="button_down" from="HUD/VolumeDown" to="HUD" method="_on_VolumeDown_button_down"]
[connection signal="button_down" from="HUD/VolumeUp" to="HUD" method="_on_VolumeUp_button_down"]
